// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer test should have fetching false 1`] = `
Object {
  "isFetching": false,
  "pendingFetches": -1,
  "sessionExpired": false,
  "showLoadingBeforeNavigating": false,
  "token": "",
  "user": null,
}
`;

exports[`reducer test should have fetching true 1`] = `
Object {
  "isFetching": true,
  "pendingFetches": 1,
  "sessionExpired": false,
  "showLoadingBeforeNavigating": false,
  "token": "",
  "user": null,
}
`;

exports[`reducer test should have session expired true 1`] = `
Object {
  "isFetching": false,
  "pendingFetches": 0,
  "sessionExpired": true,
  "showLoadingBeforeNavigating": false,
  "token": "",
  "user": null,
}
`;

exports[`reducer test should set token 1`] = `
Object {
  "isFetching": false,
  "pendingFetches": 0,
  "sessionExpired": false,
  "showLoadingBeforeNavigating": false,
  "token": "XaBCX",
  "user": null,
}
`;

exports[`reducer test should set user 1`] = `
Object {
  "isFetching": false,
  "pendingFetches": 0,
  "sessionExpired": false,
  "showLoadingBeforeNavigating": false,
  "token": "",
  "user": Object {
    "aud": "374760273133-4eghe15hb1ek840nmnjotpvtelv2fq11.apps.googleusercontent.com",
    "azp": "374760273133-4eghe15hb1ek840nmnjotpvtelv2fq11.apps.googleusercontent.com",
    "email": "sergio.mallma876@gmail.com",
    "email_verified": true,
    "exp": 1662353890,
    "family_name": "Mallma Chavez",
    "given_name": "Sergio",
    "iat": 1662350290,
    "iss": "https://accounts.google.com",
    "jti": "ae3f781891bbad12d13c9d411ad5a45e48ccf556",
    "name": "Sergio Mallma Chavez",
    "nbf": 1662349990,
    "picture": "https://lh3.googleusercontent.com/a-/AFdZucr57cAutaV8GJ70u1HWwolYmglPELDZSCrfGEFCVQ=s96-c",
    "sub": "105035299156813441187",
  },
}
`;
